# capston_h3c_integration

./: .gitignore  README.md  activate_can.txt  cali.py  howto.txt  install_cusparselt.sh  run_all.sh  to_chan_readme.txt
data/: camera_intrinsics.yaml
src/battery/: package.xml  setup.py
src/battery/battery/: battery_node.py
src/battery/launch/: battery.launch.py
src/capston_bringup/launch/: bringup_all.launch.py  realsense_wrapper.launch.py
src/patrol_bridge/: package.xml  readme.txt  setup.cfg  setup.py
src/patrol_bridge/launch/: bringup.launch.py
src/patrol_bridge/patrol_bridge/: cal_errer_node.py  can_teach_trigger.py  can_teacher_node.py  dummy_patrol_server_node.py  dummy_pose_input.py  patrol_command_bridge.py  robot_goal_sender.py  robot_pose_sender.py  teacher_node.py
src/patrol_vision/: how_To_setting_realsence.txt  package.xml  readme.txt  requirements.txt  setup.cfg  setup.py
src/patrol_vision/launch/: system.launch.py
src/patrol_vision/patrol_vision/: camera_publisher.py  cap_and_send.py  capture_sender.py  patrol_http_bridge.py  webrtc_sender.py
src/patrol_yolo/: make_engine.py  package.xml  readme.txt  setup.py
src/patrol_yolo/config/: botsort.yaml  bytetrack.yaml  person_tracker.yaml
src/patrol_yolo/launch/: person_tracker.launch.py
src/patrol_yolo/patrol_yolo/: person_detect_control_node.py  person_event_sender_node.py  person_following_node.py  person_tracker_node.py
src/rfid/launch/: rfid.launch.py
src/rfid/rfid/: secondary_auth_node.py
src/robot_gui/: need.txt
src/robot_gui/maps/: map.yaml
src/robot_gui/robot_gui/: robot_gui_node.py
src/security_audio_classifier/: package.xml  setup.cfg  setup.py
src/security_audio_classifier/config/: classifier.yaml
src/security_audio_classifier/launch/: classifier.launch.py
src/security_audio_classifier/security_audio_classifier/: classify_once.py  yamnet_classifier_node.py  yamnet_infer.py  yamnet_worker.py
src/security_audio_frontend/: package.xml  setup.cfg  setup.py
src/security_audio_frontend/config/: frontend.yaml
src/security_audio_frontend/launch/: frontend.launch.py
src/security_audio_frontend/security_audio_frontend/: audio_frontend_node.py  doa_reader.py  respeaker_doa_node.py  ring_buffer.py  trigger_detector.py
src/security_audio_msgs/: CMakeLists.txt  package.xml
src/security_audio_msgs/msg/: AudioClipInfo.msg  SoundClassification.msg  SoundEvent.msg  TransferStatus.msg
src/security_audio_system/: package.xml  setup.cfg  setup.py
src/security_audio_system/config/: system.yaml
src/security_audio_system/launch/: bringup.launch.py  system.launch.py
src/security_audio_system/security_audio_system/: clip_transfer_node.py  dummy_pose_input_node.py  sound_event_manager_node.py  sound_event_monitor_node.py  upload_client.py
