<?xml version="1.0"?>
<package format="3">
  <name>battery</name>
  <version>0.0.0</version>
  <description>PDIST120 battery percentage reader and server uploader</description>

  <maintainer email="chan@example.com">chan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
