<?xml version="1.0"?>
<package format="3">
  <name>patrol_yolo</name>
  <version>0.0.1</version>
  <description>Person detection and tracking node for webcam / RealSense</description>

  <maintainer email="example@example.com">choisuhyun</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>