<?xml version="1.0"?>
<package format="3">
  <name>security_audio_classifier</name>
  <version>0.0.1</version>
  <description>YAMNet classifier node</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>security_audio_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-soundfile</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>